SC - fixed alertModal css class when opened and end of page spacing
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@13425 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/partial/spatial/configurations/configPanel.less
+++ b/app/partial/spatial/configurations/configPanel.less
@@ -113,5 +113,5 @@
 }
 
 .spatialConfigNoBottomMargin {
-	margin-bottom: @footerHeight;
+	margin-bottom: 15px;
 }
